--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -1,27 +1,64 @@
 % This file was created with JabRef 2.5.
 % Encoding: UTF-8
 
+@STRING{arfm = {Annual Review of Fluid Mechanics}}
+@STRING{asl = {Atmospheric Science Letters}}
+@STRING{ag = {Advances in Geosciences}}
+@STRING{awr = {Advances in Water Resources}}
+@STRING{bams = {Bulletin of the American Meteorological Society}}
+@STRING{bgta = {Bollettino di Geofisica Teorica e Applicata}}
+@STRING{blm = {Boundary-Layer Meteorology}}
+@STRING{cagd = {Computer Aided Geometric Design}}
+@STRING{cd = {Climate Dynamics}}
+@STRING{csda = {Computational Statistics \& Data Analysis}}
+@STRING{csr = {Continental Shelf Research}}
+@STRING{dao = {Dynamics of Atmospheres and Oceans}}
+@STRING{dhz = {Deutsche Hydrographische Zeitschrift}}
 @STRING{dsr = {Deep-Sea Research}}
-
 @STRING{dsr1 = {Deep-Sea Research I}}
-
 @STRING{dsr2 = {Deep-Sea Research II}}
-
+@STRING{eg = {Economic Geology}}
+@STRING{ees = {Environmental and Ecological Statistics}}
+@STRING{ems = {Environmental Modelling \& Software}}
+@STRING{erl = {Environmental Research Letters}}
+@STRING{esr = {Earth-Science Reviews}}
 @STRING{grl = {Geophysical Research Letters}}
-
+@STRING{geb = {Global Ecology and Biogeography}}
+@STRING{gbc = {Global Biogeochemical Cycles}}
+@STRING{ijclim = {International Journal of Climatology}}
+@STRING{ijgis = {International Journal of Geographical Information Systems}}
+@STRING{ijrs = {International Journal of Remote Sensing}}
+@STRING{jaot = {Journal of Atmospheric and Oceanic Technology}}
+@STRING{jas = {Journal of the Atmospheric Sciences}}
+@STRING{jasa = {Journal of the American Statistical Association}}
+@STRING{jclim = {Journal of Climate}}
+@STRING{jcmmssa = {Journal of the Chemical, Metallurgical and Mining Society of South Africa}}
 @STRING{jcp = {Journal of Computational Physics}}
-
 @STRING{jgr = {Journal of Geophysical Research}}
-
+@STRING{jkss = {Journal of the Korean Statistical Society}}
 @STRING{jmr = {Journal of Marine Research}}
-
 @STRING{jms = {Journal of Marine Systems}}
-
+@STRING{jmp = {Journal of Mathematics and Physics}}
 @STRING{jpo = {Journal of Physical Oceanography}}
-
+@STRING{jo = {Journal of Oceanography}}
+@STRING{jrssb = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)}}
+@STRING{jscs = {Journal of Statistical Computation and Simulation}}
+@STRING{mb = {Marine Biology}}
+@STRING{mg = {Mathematical Geology}}
+@STRING{mwr = {Monthly Weather Review}}
+@STRING{nm = {Numerische Mathematik}}
+@STRING{lo = {Limnology and Oceanography}}
+@STRING{oa = {Oceanologica Acta}}
 @STRING{om = {Ocean Modelling}}
-
+@STRING{od = {Ocean Dynamics}}
+@STRING{os = {Ocean Science}}
+@STRING{pce = {Physics and Chemistry of the Earth}}
 @STRING{po = {Progress in Oceanography}}
+@STRING{qjrms = {Quarterly Journal of the Royal Meteorological Society}}
+@STRING{serra = {Stochastic Environmental Research and Risk Assessment}}
+@STRING{sm = {Scientia Marina}}
+@STRING{sg = {Surveys in Geophysics}}
+@STRING{tac = {Theoretical and Applied Climatology}}
 
 @BOOK{abramowitz,
   title = {Handbook of Mathematical Functions with Formulas, Graphs, and Mathematical
