--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -85,9 +85,9 @@ From here on, we will work with anomaly only and therefore formally use $\varphi
 When measuring a field, there is always uncertainty on the value obtained (whatever the instrument and the field). \textit{Noise} does not only take into account \textit{instrumental} error (which is generally low), but also:
 \begin{itemize}
 \item \textit{representativeness} errors (what one measures is not always what ones intends to analyze):\\
-\textit{e.g.} skin temperature, inadequate scales, \ldots
+\textit{e.g.,} skin temperature, inadequate scales, \ldots
 \item \textit{synopticity} errors (when the measures are assumed to be taken at the same time):\\
-\textit{e.g.} data from a cruise \citep{RIXEN01}.
+\textit{e.g.,} data from a cruise \citep{RIXEN01}.
 \end{itemize}
 
 Perfect fit to data is therefore not advised. In \diva, the analysis behaviour is controlled via the \textit{signal-to-noise ratio} of data.
@@ -435,7 +435,7 @@ K(r)=\left(\frac{r}{L}\right)K_{1}\left(\frac{r}{L}\right),
 
 where $r$ is the Euclidean distance,\\ 
 \hphantom{where} $L$ is the correlation length and \\
-\hphantom{where} $K_{1}$ is the modified Bessel function \citep[][page 359]{abramowitz}.
+\hphantom{where} $K_{1}$ is the modified Bessel function \citep[][page 359]{ABRAMOWITZ64}.
 
 %\footnote{The \textit{modified Bessel's equation} is the differential equation of order 1. 
 %
