--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -1,66 +1,124 @@
 % This file was created with JabRef 2.5.
 % Encoding: UTF-8
 
-@STRING{arfm = {Annual Review of Fluid Mechanics}}
-@STRING{asl = {Atmospheric Science Letters}}
 @STRING{ag = {Advances in Geosciences}}
+
+@STRING{arfm = {Annual Review of Fluid Mechanics}}
+
+@STRING{asl = {Atmospheric Science Letters}}
+
 @STRING{awr = {Advances in Water Resources}}
+
 @STRING{bams = {Bulletin of the American Meteorological Society}}
+
 @STRING{bgta = {Bollettino di Geofisica Teorica e Applicata}}
+
 @STRING{blm = {Boundary-Layer Meteorology}}
+
 @STRING{cagd = {Computer Aided Geometric Design}}
+
 @STRING{cd = {Climate Dynamics}}
+
 @STRING{csda = {Computational Statistics \& Data Analysis}}
+
 @STRING{csr = {Continental Shelf Research}}
+
 @STRING{dao = {Dynamics of Atmospheres and Oceans}}
+
 @STRING{dhz = {Deutsche Hydrographische Zeitschrift}}
+
 @STRING{dsr = {Deep-Sea Research}}
+
 @STRING{dsr1 = {Deep-Sea Research I}}
+
 @STRING{dsr2 = {Deep-Sea Research II}}
-@STRING{eg = {Economic Geology}}
+
 @STRING{ees = {Environmental and Ecological Statistics}}
+
+@STRING{eg = {Economic Geology}}
+
 @STRING{ems = {Environmental Modelling \& Software}}
+
 @STRING{erl = {Environmental Research Letters}}
+
 @STRING{esr = {Earth-Science Reviews}}
-@STRING{grl = {Geophysical Research Letters}}
-@STRING{geb = {Global Ecology and Biogeography}}
+
 @STRING{gbc = {Global Biogeochemical Cycles}}
+
+@STRING{geb = {Global Ecology and Biogeography}}
+
+@STRING{grl = {Geophysical Research Letters}}
+
 @STRING{ijclim = {International Journal of Climatology}}
+
 @STRING{ijgis = {International Journal of Geographical Information Systems}}
+
 @STRING{ijrs = {International Journal of Remote Sensing}}
+
 @STRING{jaot = {Journal of Atmospheric and Oceanic Technology}}
+
 @STRING{jas = {Journal of the Atmospheric Sciences}}
+
 @STRING{jasa = {Journal of the American Statistical Association}}
+
 @STRING{jclim = {Journal of Climate}}
-@STRING{jcmmssa = {Journal of the Chemical, Metallurgical and Mining Society of South Africa}}
+
+@STRING{jcmmssa = {Journal of the Chemical, Metallurgical and Mining Society of South
+	Africa}}
+
 @STRING{jcp = {Journal of Computational Physics}}
+
 @STRING{jgr = {Journal of Geophysical Research}}
+
 @STRING{jkss = {Journal of the Korean Statistical Society}}
-@STRING{jmr = {Journal of Marine Research}}
-@STRING{jms = {Journal of Marine Systems}}
+
 @STRING{jmp = {Journal of Mathematics and Physics}}
-@STRING{jpo = {Journal of Physical Oceanography}}
+
+@STRING{jmr = {Journal of Marine Research}}
+
+@STRING{jms = {Journal of Marine Systems}}
+
 @STRING{jo = {Journal of Oceanography}}
+
+@STRING{jpo = {Journal of Physical Oceanography}}
+
 @STRING{jrssb = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)}}
+
 @STRING{jscs = {Journal of Statistical Computation and Simulation}}
-@STRING{mb = {Marine Biology}}
-@STRING{mg = {Mathematical Geology}}
-@STRING{mwr = {Monthly Weather Review}}
-@STRING{nm = {Numerische Mathematik}}
+
 @STRING{lo = {Limnology and Oceanography}}
+
+@STRING{mb = {Marine Biology}}
+
+@STRING{mg = {Mathematical Geology}}
+
+@STRING{mwr = {Monthly Weather Review}}
+
+@STRING{nm = {Numerische Mathematik}}
+
 @STRING{oa = {Oceanologica Acta}}
-@STRING{om = {Ocean Modelling}}
+
 @STRING{od = {Ocean Dynamics}}
+
+@STRING{om = {Ocean Modelling}}
+
 @STRING{os = {Ocean Science}}
+
 @STRING{pce = {Physics and Chemistry of the Earth}}
+
 @STRING{po = {Progress in Oceanography}}
+
 @STRING{qjrms = {Quarterly Journal of the Royal Meteorological Society}}
+
 @STRING{serra = {Stochastic Environmental Research and Risk Assessment}}
-@STRING{sm = {Scientia Marina}}
+
 @STRING{sg = {Surveys in Geophysics}}
+
+@STRING{sm = {Scientia Marina}}
+
 @STRING{tac = {Theoretical and Applied Climatology}}
 
-@BOOK{abramowitz,
+@BOOK{ABRAMOWITZ64,
   title = {Handbook of Mathematical Functions with Formulas, Graphs, and Mathematical
 	Tables},
   publisher = {Dover},
@@ -185,7 +243,7 @@
   timestamp = {2012.08.03}
 }
 
-@ARTICLE{BRANKART1998JMS,
+@ARTICLE{BRANKART98,
   author = {Brankart, J.-M. and P. Brasseur},
   title = {The general circulation in the {M}editerranean {S}ea: a climatological
 	approach},
@@ -200,7 +258,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/S0924796398000050}
 }
 
-@ARTICLE{BRANKART1996JAOT,
+@ARTICLE{BRANKART96,
   author = {Brankart, J.-M. and P. Brasseur.},
   title = {Optimal Analysis of In Situ Data in the {W}estern {M}editerranean
 	Using Statistics and Cross-Validation},
@@ -214,7 +272,7 @@
   url = {http://journals.ametsoc.org/doi/abs/10.1175/1520-0426%281996%29013%3C0477%3AOAOISD%3E2.0.CO%3B2}
 }
 
-@PHDTHESIS{BRASSEUR1994PHD,
+@PHDTHESIS{BRASSEUR94,
   author = {Brasseur, P.},
   title = {Reconstruction de champs d'observations oc\'{e}anographiques par
 	le {M}od\`{e}le {V}ariationnel {I}nverse: M\'{e}thodologie et Applications},
@@ -224,7 +282,7 @@
   timestamp = {2010.08.16}
 }
 
-@ARTICLE{BRASSEUR1996DSR,
+@ARTICLE{BRASSEUR96,
   author = {Brasseur, P. and J.-M. Beckers and J.-M. Brankart and R. Schoenauen},
   title = {Seasonal temperature and salinity fields in the {M}editerranean {S}ea:
 	{C}limatological analyses of a historical data set},
@@ -239,7 +297,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/096706379600012X}
 }
 
-@ARTICLE{BRASSEUR91,
+@ARTICLE{BRASSEUR91b,
   author = {P. Brasseur and J. Haus},
   title = {{Application of a 3-D variational inverse model to the analysis
 	
@@ -255,7 +313,7 @@
   timestamp = {2008.11.19}
 }
 
-@ARTICLE{BRASSEUR1991JGR,
+@ARTICLE{BRASSEUR91,
   author = {P. P. Brasseur},
   title = {{A variational inverse method for the reconstruction of general circulation
 	fields in the northern Bering Sea}},
@@ -324,7 +382,7 @@
   timestamp = {2011.09.29}
 }
 
-@ARTICLE{KARAFISTAN1998DSR,
+@ARTICLE{KARAFISTAN98,
   author = {A. {Denis-Karafistan} and J.-M. Martin and H. Minas and P. Brasseur
 	and J. Nihoul and C. Denis},
   title = {Space and seasonal distributions of nitrates in the Mediterranean
@@ -362,19 +420,6 @@
   notes = {242 pp.}
 }
 
-@ARTICLE{Geuzaine,
-  author = {C. Geuzaine and J.-F. Remacle},
-  title = {{Gmsh}: a three-dimensional finite element mesh generator with
-	
-	built-in pre- and post-processing facilities},
-  journal = {Int. J. Numer. Meth. Engng.},
-  year = {2009},
-  volume = {0},
-  pages = {1-24},
-  owner = {charles},
-  timestamp = {2009.12.10}
-}
-
 @ARTICLE{GIRARD89,
   author = {D. Girard},
   title = {A fast {M}onte-{C}arlo cross-validation procedure for large least
@@ -387,7 +432,7 @@
   doi = {10.1007/BF01395775}
 }
 
-@ARTICLE{KARAFISTAN2002DSR,
+@ARTICLE{KARAFISTAN02,
   author = {Karafistan, A. and J.-M. Martin and M. Rixen and J.-M. Beckers},
   title = {Space and time distributions of phosphates in the {M}editerranean
 	{S}ea},
@@ -410,20 +455,6 @@
   year = {1951},
   volume = {95},
   pages = {13529-13541}
-}
-
-@ARTICLE{Lambrechts,
-  author = {J. Lambrechts and R. Comblen and V. Legat and C. Geuzaine and J.-F.
-	Remacle},
-  title = {Multiscale mesh generation on the sphere},
-  journal = {Ocean Dynamics},
-  year = {2008},
-  volume = {58},
-  pages = {461-473},
-  month = {December},
-  doi = {10.1007/s10236-008-0148-3},
-  owner = {charles},
-  timestamp = {2009.12.10}
 }
 
 @ARTICLE{MATHERON63,
@@ -453,7 +484,7 @@
   timestamp = {2011.05.31}
 }
 
-@ARTICLE{RIXEN2001DSR,
+@ARTICLE{RIXEN01,
   author = {Rixen, M. and J.-M. Beckers and J.T. Allen},
   title = {Diagnosis of vertical velocities with the {QG} {O}mega equation:
 	a relocation method to obtain pseudo-synoptic data sets},
@@ -468,7 +499,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/S0967063700000856}
 }
 
-@ARTICLE{RIXEN2000OM,
+@ARTICLE{RIXEN00,
   author = {Rixen, M. and J.-M. Beckers and J.-M. Brankart and P. Brasseur},
   title = {A numerically efficient data analysis method with error map generation},
   journal = om,
@@ -482,7 +513,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/S1463500300000093}
 }
 
-@ARTICLE{RIXEN2005GRL,
+@ARTICLE{RIXEN05,
   author = {Rixen, M. and J.-M. Beckers and S. Levitus and J. Antonov and T.
 	Boyer and C. Maillard and M. Fichaut and E. Balopoulos and S. Iona
 	and H. Dooley and M.-J. Garcia and B. Manca and A. Giorgetti and
@@ -500,7 +531,7 @@
   url = {http://www.agu.org/pubs/crossref/2005/2005GL022702.shtml}
 }
 
-@ARTICLE{RIXEN2005BGTA,
+@ARTICLE{RIXEN05b,
   author = {M. Rixen and J.-M. Beckers and C. Maillard and the {MEDAR Group}},
   title = {{A hydrographic and bio-chemical climatology of the Mediterranean
 	and the Black Sea: a technical note on the use of coastal data}},
@@ -595,7 +626,7 @@
   timestamp = {2009.06.23}
 }
 
-@PHDTHESIS{TROUPIN2011PHD,
+@PHDTHESIS{TROUPIN11,
   author = {C. Troupin},
   title = {Study of the Cape Ghir upwelling filament using variational data
 	analysis and regional numerical model},
@@ -608,7 +639,7 @@
   url = {http://hdl.handle.net/2268/105400}
 }
 
-@ARTICLE{TROUPIN2010JGR,
+@ARTICLE{TROUPIN10,
   author = {C. Troupin and F. Mach\'{i}n and M. Ouberdous and D. Sirjacobs and
 	A. Barth and J.-M. Beckers},
   title = {High-resolution Climatology of the North-East Atlantic using Data-Interpolating
@@ -623,7 +654,7 @@
   url = {http://www.agu.org/pubs/crossref/2010/2009JC005512.shtml}
 }
 
-@ARTICLE{TROUPIN2012bOM,
+@ARTICLE{TROUPIN12,
   author = {C. Troupin and D. Sirjacobs and M. Rixen and P. Brasseur and J.-M.
 	Brankart and A. Barth and A. Alvera-Azc\'{a}rate and A. Capet and
 	M. Ouberdous and F. Lenartz and M.-E. Toussaint and J.-M. Beckers},
@@ -639,7 +670,7 @@
   url = {http://www.sciencedirect.com/science/article/pii/S1463500312000790}
 }
 
-@ARTICLE{TYBERGHEIN2011GEB,
+@ARTICLE{TYBERGHEIN2012,
   author = {L. Tyberghein and H. Verbruggen and P. Klaas and C. Troupin and F.
 	Mineur and O. {De~Clerck}},
   title = {{ORACLE}: a global environmental dataset for marine species distribution
