--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -1,6 +1,6 @@
 \chapter{\diva\divaspace general theory\label{chaptheory}}
 \vspace*{-2cm}
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{his} chapter is dedicated to the description of the theoretical background necessary to understand how the \diva\, software works. As only the main ideas are summarized, the reader is invited to refer to the articles mentioned in the bibliography.
+\lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{his} chapter is dedicated to the description of the theoretical background necessary to understand how the \diva software works. As only the main ideas are summarized, the reader is invited to refer to the articles mentioned in the bibliography.
 
 \minitoc
 
@@ -212,7 +212,7 @@ Relatively large number of data points in each plane penalizes Optimal Interpola
 
 This is the reason why VIM resorts to the expertise in efficient finite-element solvers.
 
-\diva\, stands for \textit{Data-Interpolating Variational Analysis} and is the implementation of VIM. It is designed to solve 2-D differential or variational problems of elliptic type with a finite element method.
+\diva stands for \textit{Data-Interpolating Variational Analysis} and is the implementation of VIM. It is designed to solve 2-D differential or variational problems of elliptic type with a finite element method.
 
 
 \subsection{Formulation\label{sec:formulation}}
@@ -306,13 +306,13 @@ to apply a different relative weight to each point.
 \subsubsection{Background field\label{sec:backgroundfield}}
 % ---------------------------------------------------------
 
-Normally, interpolation (and extrapolation) works on anomalies with respect to a background field (Eq. \ref{background}). \diva\, allows you to work with different background fields:
+Normally, interpolation (and extrapolation) works on anomalies with respect to a background field (Eq. \ref{background}). \diva allows you to work with different background fields:
 
 \begin{itemize}
 \item no treatment is applied (the data you treat are already anomalies);
 \item the mean of data is subtracted from the data values;
 \item the linear regression (plane) is subtracted;
-\item additional subtracted semi-normed field ($\alpha_0=0$ and large $L$) obtained by two chained \diva\, executions. Matrix K is decomposed into a norm-related term and a data related term.
+\item additional subtracted semi-normed field ($\alpha_0=0$ and large $L$) obtained by two chained \diva executions. Matrix K is decomposed into a norm-related term and a data related term.
 \end{itemize}
 
 In particular when no treatment is applied (with $\alpha_0 > 0$), the minimization forces the analysis toward zero when there are no
@@ -391,7 +391,7 @@ For any analysis method, a quantification of associated errors is an essential f
 \item the noise on the data: the more imprecision we have on the data, the higher will be the error field.
 \end{enumerate}
 
-We will see in the next sections how \diva\, computes this error field.
+We will see in the next sections how \diva computes this error field.
 
 \subsubsection{Derivation of the error field}
 %--------------------------------------------
@@ -475,7 +475,7 @@ In an infinite domain, the correlation function was shown to be proportional to 
 \end{figure}
 
 
-The Kernel function can be used to calibrate \diva\, parameters ($\alpha_0, \alpha_1, \mu$) so as to fit observed covariance functions. This principle is used by the tool \texttt{divafit} which helps one to estimate the correlation length (see Sec. \ref{sec:divafit}).
+The Kernel function can be used to calibrate \diva parameters ($\alpha_0, \alpha_1, \mu$) so as to fit observed covariance functions. This principle is used by the tool \texttt{divafit} which helps one to estimate the correlation length (see Sec. \ref{sec:divafit}).
 
 It can also be used for specifying the covariance for error calculations.% (Sec. \ref{}).
 
@@ -563,7 +563,7 @@ Data-field covariance & $[\mathbf{c}]_{i}=\signal^{2} c(\mathbf{r},\mathbf{r_{i}
 \section{Additional tools}
 % ------------------------
 
-\diva\, software is provided with addition tools designed for parameters adjustment and validation of results.
+\diva software is provided with addition tools designed for parameters adjustment and validation of results.
 
 
 \subsection{Generalized Cross Validation (GCV)\label{firsttool}}
@@ -584,14 +584,14 @@ This is the topic of Chap. \ref{chap:advection}
 \subsection{Three-dimensional analysis}
 %--------------------------------------
 
-\diva\, is able to carry out analysis in oceanic basin, by applying successive analysis on horizontal layers, from surface to bottom. A set of scripts (\texttt{diva3D*}) are designed to perform such analysis in an automatic way.
+\diva is able to carry out analysis in oceanic basin, by applying successive analysis on horizontal layers, from surface to bottom. A set of scripts (\texttt{diva3D*}) are designed to perform such analysis in an automatic way.
 
 The whole procedure is described in the second volume of the manual.
 
 \subsection{Static instabilities removal}
 %----------------------------------------
 
-The reconstruction of three-dimensional fields of temperature and salinity by stacking of layers of analysed fields may leads to unstable density fields. A procedure implemented in \diva\, in order to remove these instabilities is presented in the second volume of the manual.
+The reconstruction of three-dimensional fields of temperature and salinity by stacking of layers of analysed fields may leads to unstable density fields. A procedure implemented in \diva in order to remove these instabilities is presented in the second volume of the manual.
 
 \subsection{\dineof\label{lasttool}}
 %-----------------------------------
@@ -607,7 +607,7 @@ For more details about \dineof, the reader is invited to consult:
 \subsection{Future developments}
 %--------------------------------
 
-Some aspects of \diva\, are still under development. Improvements in progress are:
+Some aspects of \diva are still under development. Improvements in progress are:
 
 \begin{itemize}
 %\item 3D extensions: from surface to deep layers through EOF calculated from data set (\dineof\, approach), and application in horizontal planes.
