--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -35,6 +35,7 @@
 \usepackage{times}
 \usepackage{tikz}
 \usepackage{listings}
+\usepackage{makeidx}
 
 
 \lstdefinestyle{Bash}
@@ -59,7 +60,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 
 
 % paths + extensions for the figures
-\DeclareGraphicsExtensions{.jpg,.JPG,.png,.PNG,.ps,.eps}
+\DeclareGraphicsExtensions{.pdf,.jpg,.JPG,.png,.PNG}
 \graphicspath{
 {./figures/preprocessing/},{./figures/postprocessing/},{./figures/icones/},{./figures/test_cases/},
 {./figures/examples/},{./figures/gallery/},{./figures/images/},{./figures/GUI/},{./figures/analysis/},
@@ -332,3 +333,4 @@ urlcolor=blue}
 \author{C.~Troupin, M.~Ouberdous, D.~Sirjacobs, A.~Alvera-Azc\'{a}rate,\\ A.~Barth, M.-E. Toussaint \& J.-M.~Beckers}
 \date{}
 
+\makeindex
